--- a/customer-retention-analysis/requirements.txt
+++ b/customer-retention-analysis/requirements.txt
@@ -2,13 +2,20 @@
 # Python 3.9+ required
 
 # Core Data Science
-pandas>=2.1.0
-numpy>=1.26.0
+pandas==2.1.4
+numpy==1.26.3
+
+# Machine Learning
+scikit-learn==1.3.2
+
+# Probabilistic CLV Modeling
+lifetimes==0.11.3
 
 # Visualization
-matplotlib>=3.8.0
-seaborn>=0.13.0
+matplotlib==3.8.2
+seaborn==0.13.1
 
 # Utilities
-openpyxl>=3.1.0
-xlrd>=2.0.0
+openpyxl==3.1.2
+xlrd==2.0.1
+joblib==1.3.2
