--- a/customer-retention-analysis/requirements.txt
+++ b/customer-retention-analysis/requirements.txt
@@ -7,6 +7,7 @@ numpy==1.26.3
 
 # Machine Learning
 scikit-learn==1.3.2
+imbalanced-learn==0.11.0
 
 # Probabilistic CLV Modeling
 lifetimes==0.11.3
