--- a/customer-retention-analysis/requirements.txt
+++ b/customer-retention-analysis/requirements.txt
@@ -9,6 +9,11 @@ numpy==1.26.3
 scikit-learn==1.3.2
 imbalanced-learn==0.11.0
 
+# Gradient Boosting
+lightgbm==4.1.0
+xgboost==2.0.3
+catboost==1.2.2
+
 # Probabilistic CLV Modeling
 lifetimes==0.11.3
 
