SHAP explainability analysis and feature importance
Model interpretability with SHAP values
- Global SHAP feature importance analysis
- Velocity vs static feature comparison (31% vs 69%)
- High-value customer risk analysis (13% vs 27% churn)
- SHAP summary plot and feature category breakdown
- Saved shap_feature_importance.csv

--- a/customer-retention-analysis/requirements.txt
+++ b/customer-retention-analysis/requirements.txt
@@ -17,6 +17,9 @@ catboost==1.2.2
 # Probabilistic CLV Modeling
 lifetimes==0.11.3
 
+# Explainability
+shap==0.44.0
+
 # Visualization
 matplotlib==3.8.2
 seaborn==0.13.1
