--- a/customer-retention-analysis/requirements.txt
+++ b/customer-retention-analysis/requirements.txt
@@ -9,13 +9,13 @@ numpy==1.26.3
 scikit-learn==1.3.2
 imbalanced-learn==0.11.0
 
+# Probabilistic CLV Modeling
+lifetimes==0.11.3
+
 # Gradient Boosting
 lightgbm==4.1.0
 xgboost==2.0.3
 catboost==1.2.2
-
-# Probabilistic CLV Modeling
-lifetimes==0.11.3
 
 # Explainability
 shap==0.44.0
@@ -23,6 +23,9 @@ shap==0.44.0
 # Visualization
 matplotlib==3.8.2
 seaborn==0.13.1
+
+# Deployment
+streamlit==1.31.0
 
 # Utilities
 openpyxl==3.1.2
